@@ -1,43 +1,0 @@
-%Error-UNSUPPORTED: t/t_concat_sel.v:22:28: Unsupported: Select of concatenation
-   22 |    wire [3:0]  out1 = {a,b}[2 +: 4];
-      |                            ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:23:28: Unsupported: Select of concatenation
-   23 |    wire [3:0]  out2 = {a,b}[5 -: 4];
-      |                            ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:24:28: Unsupported: Select of concatenation
-   24 |    wire [3:0]  out3 = {a,b}[5 : 2];
-      |                            ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:25:28: Unsupported: Select of concatenation
-   25 |    wire [0:0]  out4 = {a,b}[2];
-      |                            ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:31:21: Unsupported: Select of concatenation
-   31 |       if ({16'h1234}[0] != 1'b0) $stop;
-      |                     ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:32:21: Unsupported: Select of concatenation
-   32 |       if ({16'h1234}[2] != 1'b1) $stop;
-      |                     ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:33:21: Unsupported: Select of concatenation
-   33 |       if ({16'h1234}[11:4] != 8'h23) $stop;
-      |                     ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:34:21: Unsupported: Select of concatenation
-   34 |       if ({16'h1234}[4+:8] != 8'h23) $stop;
-      |                     ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:35:21: Unsupported: Select of concatenation
-   35 |       if ({16'h1234}[11-:8] != 8'h23) $stop;
-      |                     ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:36:25: Unsupported: Select of concatenation
-   36 |       if ({8'h12, 8'h34}[0] != 1'b0) $stop;
-      |                         ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:37:25: Unsupported: Select of concatenation
-   37 |       if ({8'h12, 8'h34}[2] != 1'b1) $stop;
-      |                         ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:38:25: Unsupported: Select of concatenation
-   38 |       if ({8'h12, 8'h34}[11:4] != 8'h23) $stop;
-      |                         ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:39:25: Unsupported: Select of concatenation
-   39 |       if ({8'h12, 8'h34}[4+:8] != 8'h23) $stop;
-      |                         ^
-%Error-UNSUPPORTED: t/t_concat_sel.v:40:25: Unsupported: Select of concatenation
-   40 |       if ({8'h12, 8'h34}[11-:8] != 8'h23) $stop;
-      |                         ^
-%Error: Exiting due to
